--- a/debug/index.html
+++ b/debug/index.html
@@ -4,9 +4,14 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title></title>
+  <title>Debug</title>
+<style>
+svg {
+  border: solid 1px black;
+}
+</style>
 </head>
 <body>
-  <script src="main.ts"></script>
+  <script src="./main.ts"></script>
 </body>
 </html>
