add build scripts.

--- a/bin/index.html
+++ b/bin/index.html
@@ -9,6 +9,6 @@
 <body>
   <div id="container" class="tefcha">
   </div>
-  <script src="../dist/tefcha.js"></script>
+  <script src="../umd/tefcha.js"></script>
 </body>
 </html>
