--- a/demo/index.html
+++ b/demo/index.html
@@ -51,7 +51,7 @@ End
       <div id="errMsg" class="errMsg"></div>
     </div>
   </div>
-  <script src="../dist/tefcha.js"></script>
+  <script src="../umd/tefcha.js"></script>
   <script>
     var text = document.getElementById('text');
     var flowchart = document.getElementById('flowchart');
