update Demo, README.

--- a/demo/index.html
+++ b/demo/index.html
@@ -9,6 +9,11 @@
 </head>
 
 <body>
+  <h3>
+    <a href="https://github.com/hrhr49/tefcha">
+      Tefcha Demo
+    </a>
+  </h3>
   themes:
   <button id="default">default</button>
   <button id="green">green</button>
@@ -51,7 +56,7 @@ End
       <div id="errMsg" class="errMsg"></div>
     </div>
   </div>
-  <script src="../umd/tefcha.js"></script>
+  <script src="https://unpkg.com/tefcha/umd/tefcha.js"></script>
   <script>
     var text = document.getElementById('text');
     var flowchart = document.getElementById('flowchart');
