--- a/demo/index.html
+++ b/demo/index.html
@@ -56,8 +56,7 @@ End
       <div id="errMsg" class="errMsg"></div>
     </div>
   </div>
-  <!-- <script src="https://unpkg.com/tefcha/umd/tefcha.js"></script> -->
-  <script src="umd/tefcha.js"></script>
+  <script src="https://unpkg.com/tefcha/umd/tefcha.js"></script>
   <script>
     var text = document.getElementById('text');
     var flowchart = document.getElementById('flowchart');
@@ -85,7 +84,6 @@ End
         attrs: {
           'stroke': 'dimgray',
           'stroke-width': '2px',
-          'fill': 'dimgray',
           'fill-opacity': '0%',
         },
       },
@@ -138,7 +136,6 @@ End
         attrs: {
           'stroke': 'dimgray',
           'stroke-width': '2px',
-          'fill': 'dimgray',
           'fill-opacity': '0%',
         },
       },
