--- a/examples/rich_editor/index.html
+++ b/examples/rich_editor/index.html
@@ -1,13 +1,32 @@
 <!DOCTYPE html>
 <html lang="ja">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title></title>
-</head>
-<body>
-  <div id="app"></div>
-  <script src="./src/main.tsx"></script>
-</body>
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="apple-mobile-web-app-title" content="Tefcha">
+    <link rel="apple-touch-icon" href="./images/icons/icon-152x152.png">
+
+    <link rel="manifest" href="manifest.webmanifest">
+
+    <title>Tefcha</title>
+  </head>
+  <body>
+    <div id="app"></div>
+    <script src="./src/main.tsx"></script>
+    <script>
+      if ('serviceWorker' in navigator) {
+              navigator.serviceWorker.register('sw.js')
+                .then((reg) => {
+                        console.log('Service worker registered.', reg);
+                      })
+                .catch((error) => {
+                        console.log("Error: Service worker is not registered.", error);
+                      });
+            }
+    </script>
+  </body>
 </html>
