--- a/examples/rich-editor/index.html
+++ b/examples/rich-editor/index.html
@@ -8,7 +8,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="Tefcha">
-    <link rel="apple-touch-icon" href="./images/icons/icon-152x152.png">
+    <link rel="apple-touch-icon" href="./icons/icon-152x152.png">
 
     <link rel="manifest" href="manifest.webmanifest">
 
